# simit-arm

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  FAQ.md  GUIDE.md  Makefile.am  NEWS  README  README.md  TODO  acinclude.m4  config.h.in  configure.ac  configure.in
decgen/: CMakeLists.txt  Makefile.am  bin_pattern.cpp  bin_pattern.hpp  decode.cpp  decode.h  decode_table.cpp  decode_table.h  decode_theiling.cpp  decode_theiling.h  decode_tree.cpp  decode_tree.h  huffman.cpp  huffman.h  inst_type.h  main.cpp  parse_idef.cpp  parse_idef.h  parse_idef.y  scan_idef.c  scan_idef.l  undef.cpp
emulator/: CMakeLists.txt  Makefile.am  arch.hpp  arm.isa  arm_dec.h  arm_dec2.h  arm_inst.def  arm_inst2.def  arm_io.h  arm_iss.cpp  arm_iss.hpp  armcopro.cpp  armcopro.h  armemul.cpp  armemul.h  armmmu.cpp  armmmu.h  armsupp.cpp  auto_disasm.h  auto_impl.h  bittypes.h  debug.cpp  decode.cpp  decode.h  emumem.cpp  emumem.h  loader.cpp  loader.h  main.cpp  misc.h  parse_conf.cpp  parse_conf.h  parse_conf.y  pxa_io.cpp  pxa_io.h  read_elf.cpp  read_elf.h  sa_io.cpp  sa_io.h  scan_conf.cpp  (+7 more)
issgen/: CMakeLists.txt  Makefile.am  arm.isa  issgen.cpp  issgen.hpp  parse_isa.cpp  parse_isa.h  parse_isa.y  scan_isa.cpp  scan_isa.l  symbol.cpp  symbol.hpp
jit/: CMakeLists.txt  Makefile.am  arch_gen.hpp  arch_jit.hpp  arm_gen.cpp  arm_gen.hpp  arm_iss_jit.cpp  auto_emitc.h  build_dll.hpp.in  decomp_server.cpp  decomp_server.hpp  decomp_server_main.cpp  dyn_arm_emul.cpp  dyn_arm_emul.hpp  dyn_main.cpp
test/: grep  wc
